[package]
name = "plexo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.5", features = ["derive"] }
graphql_client = "0.13.0"
inquire = "0.6.2"
reqwest = { version = "0.11.20", features = ["json"] }
serde = "1.0.188"
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
